Add Linux targeted release build